--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 0.16.2	UNRELEASED
 
+ IMPROVEMENTS
+
+  * Add naive annotate implementation in ``dulwich.annotate``.
+    It works, but performance needs work. (Jelmer Vernooĳ)
+
  TEST FIXES
 
   * Only run worktree list compat tests against git 2.7.0,
@@ -40,7 +45,7 @@
     (Mark Mikofski)
 
   * Add ``Blob.splitlines`` method.
-    (Jelmer Vernooij)
+    (Jelmer Vernooĳ)
 
  BUG FIXES
 
@@ -62,9 +67,9 @@
  BUG FIXES
 
   * Allow missing trailing LF when reading service name from
-    HTTP servers. (Jelmer Vernooij, Andrew Shadura, #442)
+    HTTP servers. (Jelmer Vernooĳ, Andrew Shadura, #442)
 
-  * Fix dulwich.porcelain.pull() on Python3. (Jelmer Vernooij, #451)
+  * Fix dulwich.porcelain.pull() on Python3. (Jelmer Vernooĳ, #451)
 
   * Properly pull in tags during dulwich.porcelain.clone.
     (Jelmer Vernooĳ, #408)
@@ -77,7 +82,7 @@
 
  IMPROVEMENTS
 
-  * Add ``dulwich.porcelain.ls_tree`` implementation. (Jelmer Vernooij)
+  * Add ``dulwich.porcelain.ls_tree`` implementation. (Jelmer Vernooĳ)
 
 0.14.1	2016-07-05
 
